<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mppi_control</name>
  <version>0.0.0</version>
  <description>MPPI Controller for Quadrotor Trajectory Tracking</description>
  <maintainer email="riccardo.enrico97@gmail.com">ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>eigen</depend>
  <depend>plan_env</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components plugin="${prefix}/mppi_control_component.xml"/>
  </export>
</package>