<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>local_sensing_node</name>
  <version>0.1.0</version>
  <description>
    render depth from depth
  </description>
  <author>Matia Pizzoli</author>
  <maintainer email="matia.pizzoli@gmail.com">Matia Pizzoli</maintainer>
  <license>GPLv3</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rclcpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
