<?xml version="1.0"?>
<package format="3">
  <version>0.0.0</version>
  <name>so3_disturbance_generator</name>
  <description>

     so3_disturbance_generator

  </description>

  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/so3_disturbance_generator</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pose_utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


