<package format="3">
  <version>0.0.0</version>
  <name>so3_quadrotor_simulator</name>
  <description>

     quadrotor_simulator

  </description>

  <maintainer email="todo@todo.todo">Kartik Mohta</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/quadrotor_simulator</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>uav_utils</build_depend>
  <build_depend>cmake_utils</build_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>uav_utils</exec_depend>
  <exec_depend>cmake_utils</exec_depend>
  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


